--- a/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
@@ -82,7 +82,7 @@
 					<div id="item">Dips</div>				
 				</div>
 			<div id="spaceBetween"></div>
-			<div id="login">Login-in | Signup</div>
+			<div id="login">Login-in | Sign-up</div>
 			<div id="checkout">Checkout</div>
 		</div>
 		
