--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -82,7 +82,7 @@
 					<div id="item">Dips</div>				
 				</div>
 			<div id="spaceBetween"></div>
-			<div id="login">Login-in | Signup</div>
+			<div id="login">Login-in | Sign-up</div>
 			<div id="checkout">Checkout</div>
 		</div>
 		
@@ -130,46 +130,199 @@
 					</div>
 				</div>
    				
-   				<div id="mainOption-lightNormalExtra">
-   				
-   					<div id="ingredientName">Cheese: </div>
-   					
-   					<div id="amountDiv">
-	   					<div id="light"> Light </div>
-	   					<div id="normal"> Normal </div>
-	   					<div id="extra"> Extra </div>
+   				<div id="mainOption-toppings">
+   					<div id="mainOption-toppingsTitleDiv"><span id="mainOption-toppingsTitle">Toppings</span></div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Cheese: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
 	   				</div>
-   					
-   					<div id="sideOfPizzaDiv">
-	   					<div id="leftSide"> Left </div>
-	   					<div id="wholeSide"> Whole </div>
-	   					<div id="rightSide"> Right </div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Pepperoni: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
 	   				</div>
-   				
-   					
-   					<div id="removeIngredient"> Remove </div>
-   					
-   				</div>
-   				
-   				<div id="mainOption-keepOrRemove">
-   				
-   				</div>
+	   				
+	   				<div id="mainOption-keepOrRemove">
+	   				
+	   				</div>
    			
+   				</div>
    			</div>
    			
-   			
+   			<div id="add-ons_Extra">
+   			<div id="add-ons_Extra-TitleDiv"><span id="add-ons_Extra-Title">Add-ons (may cost extra)</span></div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Cheese: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
+	   				</div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Ham: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
+	   				</div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Pineapple: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
+	   				</div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Bacon: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
+	   				</div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Sausage: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
+	   				</div>
+	   				
+	   				<div id="lightNormalExtra">
+	   				
+	   					<div id="ingredientName">Lettuce: </div>
+	   					
+	   					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   				</div>
+	   					
+	   					<div id="sideOfPizzaDiv">
+		   					<div id="leftSide"><span id="leftSideText"></span></div>
+		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
+		   					<div id="rightSide"><span id="rightSideText"></span></div>
+		   				</div>
+	   				
+	   					
+	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
+	   					
+	   				</div>
    				
-   			<div id="socialLinksBorder">
+   			</div>
+   		</div>
+   		
+   		<div id="socialLinksBorder">
 		     	<div id="socialLinks">
 		            <b> 
 		            	<a id="gitHub" href="https://github.com/Nathan-Barthen" target="_blank">GitHub</a>
 		                <a id="linkedIn" href="https://www.linkedin.com/in/nathan-barthen-22993722a/" target="_blank">LinkedIn</a> 
 		            </b>
 		        </div>
-			</div>
+		</div>
    			
-   		</div>
-   	
    	</div>
   </div>
 
@@ -184,6 +337,8 @@
 	<script src="/javaScript/menuOptions/showMisc.js"></script>
 	
 	<script src="/javaScript/updateSelectedOption.js"></script>
+	<script src="/javaScript/selectedOptions-itemPage.js"></script>
+	<script src="/javaScript/removeSelectedOption-itemPage.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
 	<script src="/javaScript/errorRedirectPopup.js"></script>
