--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/bottomLinks.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/bottomLinks.css
@@ -4,8 +4,8 @@
    
    #socialLinksBorder {
    		height: 100px;
-		width: 1396px;
-		min-width: 100%;
+		width: 1400px;
+		max-width: 100%;
 		position: relative;
 		
 	   	bottom: 0;
