--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/home.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/home.css
@@ -131,6 +131,8 @@
 					  	border: 2px solid black;
 					  	
 					  	flex-direction: column;
+					  	
+					  	cursor: pointer;
 					}
 				
 						#categoryImgDiv {
