--- a/pizza-ordedring-app/src/main/resources/templates/homePage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/homePage.html
@@ -230,6 +230,12 @@
 	<script src="/javaScript/menuOptions/showDrinks.js"></script>
 	<script src="/javaScript/menuOptions/showMisc.js"></script>
 	
+	<script src="/javaScript/pageRedirects/clicksLoginSignup.js"></script>
+	<script src="/javaScript/pageRedirects/clicksPizzaLogo.js"></script>
+	<script src="/javaScript/pageRedirects/clicksCategory.js"></script>
+	<script src="/javaScript/pageRedirects/clicksItem.js"></script>
+	<script src="/javaScript/pageRedirects/clicksCheckout.js"></script>
+	
 	<script src="/javaScript/bodySize-homePage.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
