--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -336,6 +336,11 @@
 	<script src="/javaScript/menuOptions/showDrinks.js"></script>
 	<script src="/javaScript/menuOptions/showMisc.js"></script>
 	
+	<script src="/javaScript/pageRedirects/clicksLoginSignup.js"></script>
+	<script src="/javaScript/pageRedirects/clicksPizzaLogo.js"></script>
+	<script src="/javaScript/pageRedirects/clicksItem.js"></script>
+	<script src="/javaScript/pageRedirects/clicksCheckout.js"></script>
+	
 	<script src="/javaScript/updateSelectedOption.js"></script>
 	<script src="/javaScript/selectedOptions-itemPage.js"></script>
 	<script src="/javaScript/removeSelectedOption-itemPage.js"></script>
