--- a/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
@@ -164,7 +164,7 @@
 				      	</form>
 				      	<div id="signInDiv">
 				          	<span id="signInParamTitle"> Already have an Account? </span>
-				          	 <a id="signInLink" th:href="@{/pizzaStore/login}">Log-in</a>
+				          	 <a id="signInLink" th:href="@{/pizzaStore/signin}">Log-in</a>
 				        </div>
 				      </div>
 			    </div>
@@ -193,6 +193,11 @@
 	<script src="/javaScript/menuOptions/showDesserts.js"></script>
 	<script src="/javaScript/menuOptions/showDrinks.js"></script>
 	<script src="/javaScript/menuOptions/showMisc.js"></script>
+	
+	<script src="/javaScript/pageRedirects/clicksLoginSignup.js"></script>
+	<script src="/javaScript/pageRedirects/clicksPizzaLogo.js"></script>
+	<script src="/javaScript/pageRedirects/clicksItem.js"></script>
+	<script src="/javaScript/pageRedirects/clicksCheckout.js"></script>
 	
 	<script src="/javaScript/updateSelectedOption.js"></script>
 	
