--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
@@ -66,6 +66,8 @@
 			 align-items: center;
 			 justify-content: center;
 		  	 margin: auto;
+		  	 
+		  	 cursor: pointer;
 		}
 	
 	#hours {
@@ -92,7 +94,6 @@
 			text-decoration: underline;
 			color: rgb(255, 204, 0);
 			cursor: pointer;
-			
 			
 		}
 			#hiddenOperatingHours {
@@ -152,7 +153,7 @@
 			
 		}
 	
-	#item {
+			#item {
 				display: flex;
 				align-items: center;
 	    		text-align: center;
@@ -165,7 +166,9 @@
 				padding-right: 15px;
 				white-space: nowrap;
 				color: rgb(255, 204, 0);
-	}
+				
+				cursor: pointer;
+			}
 	
 	@keyframes wave-downward {
 		  0% {
@@ -582,9 +585,16 @@
 	
 	#checkout {
 		width: 11%;
-		height: 100%;
+		height: 60%;
+		margin-left: 10px;
+		margin-right: 10px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		
+		color: white;
+		background-color: rgb(0, 57, 230);
+		border: 2px solid black;
+		cursor: pointer;
 	}
 	
