--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/sign-upPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/sign-upPage.css
@@ -19,6 +19,7 @@
 		color: black;
 		
 		display: flex;
+		margin-bottom: 20px;
 	}
 	
 		#storeLocation {
@@ -89,6 +90,7 @@
 				justify-content: center;
 				align-items: center;
 				
+				
 		        margin-bottom: 10px;
 		        font-size: 50px;
 		      }
@@ -124,7 +126,7 @@
 		      	#signUpConfirmPassTitle {
 		      		width: 45%;
 		      		display: flex;
-			      	justify-content: left;
+			      	justify-content: center;
 					align-items: center;
 		      		font-size: 30px;
 		      		font-style: italic;
