--- a/pizza-ordedring-app/src/main/resources/templates/sign-inPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-inPage.html
@@ -144,6 +144,11 @@
 	<script src="/javaScript/menuOptions/showDrinks.js"></script>
 	<script src="/javaScript/menuOptions/showMisc.js"></script>
 	
+	<script src="/javaScript/pageRedirects/clicksLoginSignup.js"></script>
+	<script src="/javaScript/pageRedirects/clicksPizzaLogo.js"></script>
+	<script src="/javaScript/pageRedirects/clicksItem.js"></script>
+	<script src="/javaScript/pageRedirects/clicksCheckout.js"></script>
+	
 	<script src="/javaScript/updateSelectedOption.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
