--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -128,6 +128,11 @@
 						    <li><a href="#">Light Sauce</a></li>
 						</ul>
 					</div>
+					<div id="amountDiv">
+		   					<div id="light"> <span id="lightText">Light</span> </div>
+		   					<div id="normal"> <span id="normalText">Normal</span> </div>
+		   					<div id="extra"> <span id="extraText">Extra</span> </div>
+		   			 </div>
 				</div>
    				
    				<div id="mainOption-toppings">
@@ -312,6 +317,11 @@
 	   				</div>
    				
    			</div>
+   			<div id="userComments">
+   				<textarea id="additionalInstructions" name="additionalInstructions"
+   				 placeholder="Additional Instructions..."  rows="5" cols="50" maxlength="250"></textarea>
+    			 <div id="countDisplay">0/250</div>
+   			</div>
    		</div>
    		
    		<div id="socialLinksBorder">
@@ -344,6 +354,7 @@
 	<script src="/javaScript/updateSelectedOption.js"></script>
 	<script src="/javaScript/selectedOptions-itemPage.js"></script>
 	<script src="/javaScript/removeSelectedOption-itemPage.js"></script>
+	<script src="/javaScript/usesCommentsCharLeft.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
 	<script src="/javaScript/errorRedirectPopup.js"></script>
