--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/checkoutPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/checkoutPage.css
@@ -78,17 +78,19 @@
 		}
 			#orderInformation {
 				width: 70%;
+				min-height: 500px; 
+				position: relative;
 				
 				border-radius: 10px;
 				border: 3px solid gray;
+				background-color: rgb(179, 179, 255);
 				
 				display: flex;
 				flex-direction: column;
 				
-				justify-content: center;
 				align-items: center;
 				text-align: center;
-				
+					
 				margin: auto;
 				margin-bottom: 20px;
 			}
@@ -96,24 +98,136 @@
 					width: 100%;
 					
 					display: flex;
-					justify-content: center;
-					align-items: center;
+					position: absolute;
+					top: 0;
+					left: 31%;
 					
 					
-			        margin-bottom: 10px;
+			        margin-bottom: 0px;
 			        font-size: 50px;
-			        color: rgb(79, 137, 252);
+			        
+			        color: rgb(51, 51, 255);
 			        text-decoration: underline;
 					text-decoration-color: rgb(4, 86, 251);
 			      }
 			      #orderInfoDetails {
-			      	width: 100%;
-					height: 300px;
+			      	width: 70%;
+					height: 250px;
 					
+					display: flex;
+					flex-direction: column;
+				 	align-items: center;
+				  	font-size: 35px;
 					
+					font-size: 30px;
+					padding-top: 60px;
 					margin-bottom: 20px;
 			      }
-			
+			      	#storeName {
+			      		margin-bottom: 5px;
+			      	}
+			      	#storeLocation {
+			      		margin-bottom: 5px;
+			      	}
+			      	#storePhone {
+			      		margin-bottom: 5px;
+			      	}
+			      	#deliveryPickupEta {
+			      	  width: 40%;
+			      	  display: flex;
+					  margin-bottom: 20px;
+					  
+					  flex-direction: column;
+					}
+						#typeEta {
+							display: flex;
+							align-items: flex-start;
+						}
+						#etaTimes {
+							margin-left: auto;
+						}
+					
+					#deliveryPickupSelector {
+					  width: 40%;
+					  display: flex;
+					  flex-direction: row;
+					}
+						#deliverySelector {
+							width: 40%;
+							display: flex;
+							align-items: flex-start;
+							
+							padding: 2px;
+							padding-left: 4px;
+							border-radius: 10px;
+							border: 3px solid blue;
+							
+							background-color: rgb(213, 128, 255);
+							
+							cursor: pointer;
+						}
+						#pickupSelector {
+							width: 40%;
+							margin-left: auto;
+							
+							padding: 2px;
+							border-radius: 10px;
+							border: 3px solid blue;
+							
+							background-color: rgb(204, 204, 204);
+							
+							cursor: pointer;
+						}
+						
+					#collectionMethod {
+					  width: 75%;
+					  display: flex;
+					  justify-content: center;
+					  align-items: center;
+					  text-align: center;
+					  
+					  padding-bottom: 5px;
+					  padding-top: 10px;
+					}
+						#collectionType {
+							width: 35%;
+						}
+						#collectionLocation {
+							width: 65%;
+							display: flex;
+							justify-content: flex-end;
+							align-items: center;
+							text-align: center;
+							font-style: italic;
+							
+						}
+					
+					#userComments {
+						width: 100%;
+						height: 120px;
+						
+						padding-top: 5px;
+						display: flex;
+						align-items: center;
+						text-align: center;
+						justify-content: center;
+						
+					}
+						#additionalInstructions {
+							height: 100px;
+							width: 450px;
+							font-size: 20px;
+						}
+						#countDisplay {
+							height: 100%;
+							display: flex;
+							align-items: end;
+							text-align: center;
+							justify-content: center;
+							padding-left: 5px;
+							
+							font-size: 20px;
+						}
 			#cart {
 				margin-top: 30px;
 				
@@ -121,6 +235,7 @@
 				
 				border-radius: 10px;
 				border: 3px solid gray;
+				background-color: rgb(179, 179, 255);
 				
 				display: flex;
 				flex-direction: column;
@@ -128,6 +243,7 @@
 				justify-content: center;
 				align-items: center;
 				text-align: center;
+				padding-bottom: 30px;
 				
 				margin: auto;
 			}
@@ -141,18 +257,20 @@
 					
 			        margin-bottom: 10px;
 			        font-size: 50px;
-			        color: rgb(79, 137, 252);
+			        color: rgb(51, 51, 255);
 			        text-decoration: underline;
 					text-decoration-color: rgb(4, 86, 251);
 			      }
 		     	#cartItem {
+		     		position: relative;
 		     		width: 90%;
-					height: 300px;
+					min-height: 200px;
 					
 					border-radius: 10px;
 					border: 3px solid gray;
+					background-color: rgb(153, 153, 255);
 					
-					margin-bottom: 10px;
+					padding-bottom: 10px;
 		     	}
 		     		#cartItemName {
 		     			width: 100%;
@@ -164,12 +282,198 @@
 						
 				        margin-bottom: 10px;
 				        font-size: 40px;
+				        
+				        color: rgb(170, 0, 255);
+			        	text-decoration: underline;
+						text-decoration-color: rgb(4, 86, 251);
 		     		}
+		     		#cartRemoveItem {
+						  position: absolute;
+						  top: 0;
+						  right: 0;
+						  
+						  width: 45px;
+						  height: 45px;
+						  
+						  background-color: red;
+						  border-radius: 50%;
+						  
+						  display: flex;
+						  justify-content: center;
+						  align-items: center;
+						  
+						  margin-right: 5px;
+						  margin-top: 5px;
+						  border: 3px solid black;
+						  
+						  cursor: pointer;
+					}
+					#cartRemoveItem::before {
+						  content: 'X';
+						  color: white;
+						  font-weight: bold;
+						  font-size: 30px;
+					}
+					
+					#cartEditItem {
+						 position: absolute;
+						  top: 0;
+						  left: 0;
+						  
+						  width: 70px;
+						  height: 40px;
+						  
+						  background-color: blue;
+						  
+						  color: white;
+						  display: flex;
+						  justify-content: center;
+						  align-items: center;
+						  
+						  border-radius: 10px;
+						  border: 3px solid black;
+						  
+						  margin-left: 5px;
+						  margin-top: 5px;
+						  font-size: 30px;
+						  font-family: Trebuchet MS;
+						  cursor: pointer;
+					}
+					
+					
+		     		
 					#cartItemDetails {
-						width: 100%;
-						height: 100%;
+						 width: 100%;
+						 height: 100%;
 						
 					}
+					
+					
+					
+						#itemIngredients {
+				 			width: 100%;
+							height: 50px;
+							
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							text-align: center;
+							     
+							
+				 		}
+					 		#ingredientName {
+					 			width: 25%;
+								font-size: 40px;
+								display: flex;
+								text-align: flex-start; 
+								  
+					 		}
+					 		#amountDiv {
+					 			width: 15%;
+								font-size: 30px;
+								
+								display: flex;
+								align-items: center;
+								text-align: center;
+								justify-content: center;
+					 		}
+					 			
+					 			#pickedAmount {
+					 				width: 100%;
+								
+									display: flex;
+									align-items: center;
+									text-align: center;
+									justify-content: center;
+									
+					 			}
+					 				#pickedAmtText {
+						 				width: 92%;
+										border-radius: 10px;
+									  	border: 2px solid black;
+								  		background-color: rgb(255, 133, 77);
+								  		
+								  		cursor: pointer;
+					 				}
+					 			
+					 			
+				 			#sideOfPizzaDiv {
+					 			width: 15%;
+								font-size: 30px;
+								
+								display: flex;
+								align-items: center;
+								text-align: center;
+								justify-content: center;
+								
+								flex-direction: row;
+					 		}
+					 			#leftSide {
+					 				width: 100%;
+								
+									display: flex;
+									align-items: center;
+									text-align: center;
+									justify-content: center;
+					 			}
+					 				#leftSideText {
+					 					width: 40px;
+									    height: 40px;
+									    border-radius: 50%;
+									    border: 2px solid black;
+									    background-color: transparent;
+									    background-image: conic-gradient(from 0deg, rgb(191, 191, 191) 50%, rgb(255, 133, 77) 50%);
+									    display: flex;
+									    justify-content: center;
+									    align-items: center;
+									    
+									    cursor: pointer;
+					 				}
+					 				
+					 			#wholeSide {
+					 				width: 100%;
+								
+									display: flex;
+									align-items: center;
+									text-align: center;
+									justify-content: center;
+					 			}
+					 				#wholeSideText {
+						 				width: 40px;
+									    height: 40px;
+									    border-radius: 50%;
+									    border: 2px solid black;
+									    background-color: transparent;
+									    background-image: conic-gradient(from 0deg, rgb(255, 133, 77) 50%, rgb(255, 133, 77) 50%);
+									    display: flex;
+									    justify-content: center;
+									    align-items: center;
+								  	
+								  		cursor: pointer;
+					 				}
+					 				
+					 			#rightSide {
+					 				width: 100%;
+								
+									display: flex;
+									align-items: center;
+									text-align: center;
+									justify-content: center;
+					 			}
+					 				#rightSideText {
+						 				width: 40px;
+									    height: 40px;
+									    border-radius: 50%;
+									    border: 2px solid black;
+									    background-color: transparent;
+									    background-image: conic-gradient(from 0deg, rgb(255, 133, 77) 50%, rgb(191, 191, 191) 50%);
+									    display: flex;
+									    justify-content: center;
+									    align-items: center;
+									    
+									    cursor: pointer;
+								  	}
+	 		
 		
 		
 		
