--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
@@ -166,9 +166,8 @@
 			}	
 			
 				#dropdownLabelName {
-					width: 45%;
+					width: 35%;
 					font-size: 40px;
-					padding-right: 10px;
 					text-align: end;
 					
 				}
@@ -192,6 +191,7 @@
 				    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 				  	
 				  	font-size: 25px;
+				  	margin-right: 20px;
 			  }
 			  #selectedOption {
 			    position: relative;
@@ -443,8 +443,8 @@
  		/* END - Main Options - lightNormalExtra styles */
 			
 		#add-ons_Extra {
-			min-height: 450px;
-			padding-bottom: 100px;
+			min-height: 350px;
+			
 		}
 			#add-ons_Extra-TitleDiv {
  			width: 100%;
@@ -472,8 +472,33 @@
 				
 				border-top: 1px solid black;
  			}
-
-		
+			#userComments {
+				width: 100%;
+				height: 120px;
+				padding-top: 20px;
+				padding-bottom: 100px;
+				
+				display: flex;
+				align-items: center;
+				text-align: center;
+				justify-content: center;
+				
+			}
+				#additionalInstructions {
+					height: 120px;
+					width: 650px;
+					font-size: 20px;
+				}
+				#countDisplay {
+					height: 100%;
+					display: flex;
+					align-items: end;
+					text-align: center;
+					justify-content: center;
+					padding-left: 5px;
+					
+					font-size: 20px;
+				}
 		
 		
 		
