--- a/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
@@ -102,64 +102,64 @@
 				        	Create an Account
 				      </div>
 				      <div id="signUpEntry">
-				      
-				      	<div id="signUpFirstName">
-						    <span id="signUpParamTitle"> *First Name: </span>
-						    <input type="text" name="firstname" required>
-						</div>
-						<div id="signUpCheckFirstName">
-						    <span id="emptyText"></span>
-						    <div class="errorMessages" id="firstNameErrorMessages"></div>
-						</div>
-						
-						
-						<div id="signUpLastName">
-						    <span id="signUpParamTitle"> *Last Name: </span>
-						    <input type="text" name="lastname" required>
-						</div>
-						<div id="signUpCheckLastName">
-						    <span id="emptyText"></span>
-						    <div class="errorMessages" id="lastNameErrorMessages"></div>
-						</div>
-						
-						
-						<div id="signUpAddress">
-						    <span id="signUpParamTitle"> *Address: </span>
-						    <input type="text" name="address" required>
-						</div>
-						<div id="signUpCheckAddress">
-						    <span id="emptyText"></span>
-						    <div class="errorMessages" id="addressErrorMessages"></div>
-						</div>
-						
-						
-						<div id="signUpEmail">
-						    <span id="signUpParamTitle"> *Email: </span>
-						    <input type="text" name="email" required>
-						</div>
-						<div id="signUpCheckEmail">
-						    <span id="emptyText"></span>
-						    <div class="errorMessages" id="emailErrorMessages"></div>
-						</div>
-				        
-				        
-				        <div id="signUpPassword">
-				          	<span id="signUpParamTitle"> *Password: </span>
-				          	 <input id="password"  type="password" name="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[a-z]).{7,}$" required title="Password must be at least 7 characters with one capital and one number">
-				        </div>
-				        
-				        <div id="signUpConfirmPassword">
-						  	<span id="signUpConfirmPassTitle"> *Confirm Pass: </span>
-						  	<input id="confirmPassword" type="password" name="confirmPassword" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[a-z]).{7,}$" required title="Password must be at least 7 characters with one capital and one number">
-						</div>
-				        
-				        <div id="signUpConfirmPassword">
-				        	<span id="emptyText"></span>
-				        	<div class="errorMessages" id="passwordErrorMessages"></div>
-				        </div>
-				        
-				        
-				        <form id="signUpForm">
+				      	<form id="signUpForm" method="post" th:action="@{/signup}">
+					      	<div id="signUpFirstName">
+							    <span id="signUpParamTitle"> *First Name: </span>
+							    <input type="text" name="firstname" required>
+							</div>
+							<div id="signUpCheckFirstName">
+							    <span id="emptyText"></span>
+							    <div class="errorMessages" id="firstNameErrorMessages"></div>
+							</div>
+							
+							
+							<div id="signUpLastName">
+							    <span id="signUpParamTitle"> *Last Name: </span>
+							    <input type="text" name="lastname" required>
+							</div>
+							<div id="signUpCheckLastName">
+							    <span id="emptyText"></span>
+							    <div class="errorMessages" id="lastNameErrorMessages"></div>
+							</div>
+							
+							
+							<div id="signUpAddress">
+							    <span id="signUpParamTitle"> *Address: </span>
+							    <input type="text" name="address" required>
+							</div>
+							<div id="signUpCheckAddress">
+							    <span id="emptyText"></span>
+							    <div class="errorMessages" id="addressErrorMessages"></div>
+							</div>
+							
+							
+							<div id="signUpEmail">
+							    <span id="signUpParamTitle"> *Email: </span>
+							    <input type="text" name="email" required>
+							</div>
+							<div id="signUpCheckEmail">
+							    <span id="emptyText"></span>
+							    <div class="errorMessages" id="emailErrorMessages"></div>
+							</div>
+					        
+					        
+					        <div id="signUpPassword">
+					          	<span id="signUpParamTitle"> *Password: </span>
+					          	 <input id="password"  type="password" name="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[a-z]).{7,}$" required title="Password must be at least 7 characters with one capital and one number">
+					        </div>
+					        
+					        <div id="signUpConfirmPassword">
+							  	<span id="signUpConfirmPassTitle"> *Confirm Pass: </span>
+							  	<input id="confirmPassword" type="password" name="confirmPassword" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[a-z]).{7,}$" required title="Password must be at least 7 characters with one capital and one number">
+							</div>
+					        
+					        <div id="signUpConfirmPassword">
+					        	<span id="emptyText"></span>
+					        	<div class="errorMessages" id="passwordErrorMessages"></div>
+					        </div>
+					        
+					        
+					       
 				        	<input type="submit" value="Sign Up">
 				      	</form>
 				      	<div id="signInDiv">
